--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -41,7 +41,7 @@ dockers:
     image_templates:
     - "sammcgeown/vra-cli:latest-amd64"
     - "sammcgeown/vra-cli:v{{ .Major }}.{{ .Minor }}-amd64"
-    use_buildx: true
+    use: buildx
   -
     goos: linux
     goarch: arm64
